--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            Commit then push
+            Commit then push Joseph poge
         </div>
     </body>
 </html>
